# chinese-poetry-generator

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  app.py  hf_spaces_README.md  main.py  pyproject.toml  requirements.txt  tinyllama_poetry_finetune.py  training_data.json
.github/workflows/: deploy-to-hf-spaces.yml
tinyllama-poetry/: adapter_config.json
tinyllama-poetry/checkpoint-20/: trainer_state.json
