[project]
name = "fine-tuning-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "peft>=0.17.1",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "wandb>=0.21.1",
]
